kubernetes/backend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "ws-sticky-session-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/upstream-hash-by: $host$remote_addr$remote_port
spec:
  tls:
    - hosts:
        - "*.backend.rootshell.my.id"
      secretName: skripsi-tls
  rules:
    - host: "*.backend.rootshell.my.id"
      http:
        paths:
          - backend:
              serviceName: backend-service
              servicePort: 1111
