kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - frontend.rootshell.my.id
      secretName: skripsi-tls
  rules:
    - host: frontend.rootshell.my.id
      http:
        paths:
          - backend:
              serviceName: frontend-service
              servicePort: 2222
