kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: skripsi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "ws-sticky-session-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  tls:
    - hosts:
        - backend.byeol.my.id
        - frontend.byeol.my.id
      secretName: skripsi-tls
  rules:
    - host: backend.byeol.my.id
      http:
        paths:
          - backend:
              serviceName: backend-service
              servicePort: 1111
    - host: frontend.byeol.my.id
      http:
        paths:
          - backend:
              serviceName: frontend-service
              servicePort: 2222
